[gd_scene load_steps=4 format=3 uid="uid://bi0du7rujukxq"]

[ext_resource type="Texture2D" uid="uid://bk483y6tvh6nq" path="res://assets/icons/cogbutton.png" id="1_5ojho"]
[ext_resource type="Texture2D" uid="uid://bmt885g0bl15h" path="res://assets/icons/bagbutton.png" id="2_oimov"]
[ext_resource type="Script" path="res://scenes/combat/spell_node.gd" id="3_1pf50"]

[node name="SpellNode" type="TextureButton"]
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("1_5ojho")
texture_hover = ExtResource("2_oimov")
script = ExtResource("3_1pf50")

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
